# Shadow_usage_detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo_script.py  dev.bat  history.db  main.py  presentation_demo.py  pyproject.toml  test_api_live.py  test_db_logging.py  test_frontend_checklist.py  test_frontend_integration.py  test_history_api.py  test_sample.py  test_scoring.py  test_style_inconsistency.py  test_upload.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json
data/: history.db  quiz_questions.json
demo_samples/: human_written_sample.py  ultra_ai_sample.py
docs/: environment.md
scripts/: clean_code.py  clean_engine.py  debug_scoring.py  dev.ps1
shadow_ai/: __init__.py  cli.py  database.py  engine.py  parser.py  scoring.py
static/: dashboard.html  index.html  quiz.html
tests/: __init__.py  test_api.py  test_cli.py  test_detection_engine.py  test_initial_setup.py  test_parser.py  test_parser_unified.py  test_scoring.py  test_style_inconsistency.py
